expression_tests/cases/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> print_smt
Rule 1     print_smt -> expression SEMICOLON
Rule 2     expression -> LPAREN expression RPAREN
Rule 3     expression -> tuple
Rule 4     tuple -> LPAREN expression tupletail
Rule 5     tupletail -> COMMA expression tupletail
Rule 6     tupletail -> RPAREN
Rule 7     expression -> TUPLEINDEX expression tuple
Rule 8     expression -> expression PLUS expression
Rule 9     expression -> expression MINUS expression
Rule 10    expression -> term
Rule 11    term -> term TIMES factor
Rule 12    term -> term DIVIDE factor
Rule 13    term -> factor POWER term
Rule 14    term -> term DIV factor
Rule 15    term -> term MOD factor
Rule 16    term -> factor
Rule 17    factor -> LPAREN expression RPAREN
Rule 18    factor -> NUMBER
Rule 19    factor -> MINUS factor
Rule 20    expression -> list
Rule 21    list -> LBRACKET tail
Rule 22    list -> LBRACKET expression tail
Rule 23    tail -> COMMA expression tail
Rule 24    tail -> RBRACKET
Rule 25    list -> list PLUS list
Rule 26    expression -> list LBRACKET expression RBRACKET
Rule 27    list -> list LBRACKET expression RBRACKET
Rule 28    expression -> string
Rule 29    string -> STRING
Rule 30    expression -> string PLUS expression
Rule 31    expression -> string LBRACKET expression RBRACKET
Rule 32    boolean -> expression IN expression
Rule 33    list -> expression CONCAT list
Rule 34    boolean -> expression LT expression
Rule 35    boolean -> expression LE expression
Rule 36    boolean -> expression EQUALS expression
Rule 37    boolean -> expression NE expression
Rule 38    boolean -> expression GT expression
Rule 39    boolean -> expression GE expression
Rule 40    expression -> boolean
Rule 41    boolean -> BOOLEAN
Rule 42    expression -> NOT expression
Rule 43    expression -> expression AND expression
Rule 44    expression -> expression OR expression

Terminals, with rules where they appear

AND                  : 43
BOOLEAN              : 41
COMMA                : 5 23
CONCAT               : 33
DIV                  : 14
DIVIDE               : 12
EQUALS               : 36
GE                   : 39
GT                   : 38
IN                   : 32
LBRACKET             : 21 22 26 27 31
LE                   : 35
LPAREN               : 2 4 17
LT                   : 34
MINUS                : 9 19
MOD                  : 15
NE                   : 37
NOT                  : 42
NUMBER               : 18
OR                   : 44
PLUS                 : 8 25 30
POWER                : 13
RBRACKET             : 24 26 27 31
RPAREN               : 2 6 17
SEMICOLON            : 1
STRING               : 29
TIMES                : 11
TUPLEINDEX           : 7
error                : 

Nonterminals, with rules where they appear

boolean              : 40
expression           : 1 2 4 5 7 8 8 9 9 17 22 23 26 27 30 31 32 32 33 34 34 35 35 36 36 37 37 38 38 39 39 42 43 43 44 44
factor               : 11 12 13 14 15 16 19
list                 : 20 25 25 26 27 33
print_smt            : 0
string               : 28 30 31
tail                 : 21 22 23
term                 : 10 11 12 13 14 15
tuple                : 3 7
tupletail            : 4 5

Parsing method: LALR

state 0

    (0) S' -> . print_smt
    (1) print_smt -> . expression SEMICOLON
    (2) expression -> . LPAREN expression RPAREN
    (3) expression -> . tuple
    (7) expression -> . TUPLEINDEX expression tuple
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . term
    (20) expression -> . list
    (26) expression -> . list LBRACKET expression RBRACKET
    (28) expression -> . string
    (30) expression -> . string PLUS expression
    (31) expression -> . string LBRACKET expression RBRACKET
    (40) expression -> . boolean
    (42) expression -> . NOT expression
    (43) expression -> . expression AND expression
    (44) expression -> . expression OR expression
    (4) tuple -> . LPAREN expression tupletail
    (11) term -> . term TIMES factor
    (12) term -> . term DIVIDE factor
    (13) term -> . factor POWER term
    (14) term -> . term DIV factor
    (15) term -> . term MOD factor
    (16) term -> . factor
    (21) list -> . LBRACKET tail
    (22) list -> . LBRACKET expression tail
    (25) list -> . list PLUS list
    (27) list -> . list LBRACKET expression RBRACKET
    (33) list -> . expression CONCAT list
    (29) string -> . STRING
    (32) boolean -> . expression IN expression
    (34) boolean -> . expression LT expression
    (35) boolean -> . expression LE expression
    (36) boolean -> . expression EQUALS expression
    (37) boolean -> . expression NE expression
    (38) boolean -> . expression GT expression
    (39) boolean -> . expression GE expression
    (41) boolean -> . BOOLEAN
    (17) factor -> . LPAREN expression RPAREN
    (18) factor -> . NUMBER
    (19) factor -> . MINUS factor

    LPAREN          shift and go to state 3
    TUPLEINDEX      shift and go to state 5
    NOT             shift and go to state 12
    LBRACKET        shift and go to state 9
    STRING          shift and go to state 14
    BOOLEAN         shift and go to state 15
    NUMBER          shift and go to state 16
    MINUS           shift and go to state 6

    print_smt                      shift and go to state 1
    expression                     shift and go to state 2
    tuple                          shift and go to state 4
    term                           shift and go to state 7
    list                           shift and go to state 8
    string                         shift and go to state 10
    boolean                        shift and go to state 11
    factor                         shift and go to state 13

state 1

    (0) S' -> print_smt .



state 2

    (1) print_smt -> expression . SEMICOLON
    (8) expression -> expression . PLUS expression
    (9) expression -> expression . MINUS expression
    (43) expression -> expression . AND expression
    (44) expression -> expression . OR expression
    (33) list -> expression . CONCAT list
    (32) boolean -> expression . IN expression
    (34) boolean -> expression . LT expression
    (35) boolean -> expression . LE expression
    (36) boolean -> expression . EQUALS expression
    (37) boolean -> expression . NE expression
    (38) boolean -> expression . GT expression
    (39) boolean -> expression . GE expression

    SEMICOLON       shift and go to state 17
    PLUS            shift and go to state 18
    MINUS           shift and go to state 19
    AND             shift and go to state 20
    OR              shift and go to state 21
    CONCAT          shift and go to state 22
    IN              shift and go to state 23
    LT              shift and go to state 24
    LE              shift and go to state 25
    EQUALS          shift and go to state 26
    NE              shift and go to state 27
    GT              shift and go to state 28
    GE              shift and go to state 29


state 3

    (2) expression -> LPAREN . expression RPAREN
    (4) tuple -> LPAREN . expression tupletail
    (17) factor -> LPAREN . expression RPAREN
    (2) expression -> . LPAREN expression RPAREN
    (3) expression -> . tuple
    (7) expression -> . TUPLEINDEX expression tuple
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . term
    (20) expression -> . list
    (26) expression -> . list LBRACKET expression RBRACKET
    (28) expression -> . string
    (30) expression -> . string PLUS expression
    (31) expression -> . string LBRACKET expression RBRACKET
    (40) expression -> . boolean
    (42) expression -> . NOT expression
    (43) expression -> . expression AND expression
    (44) expression -> . expression OR expression
    (4) tuple -> . LPAREN expression tupletail
    (11) term -> . term TIMES factor
    (12) term -> . term DIVIDE factor
    (13) term -> . factor POWER term
    (14) term -> . term DIV factor
    (15) term -> . term MOD factor
    (16) term -> . factor
    (21) list -> . LBRACKET tail
    (22) list -> . LBRACKET expression tail
    (25) list -> . list PLUS list
    (27) list -> . list LBRACKET expression RBRACKET
    (33) list -> . expression CONCAT list
    (29) string -> . STRING
    (32) boolean -> . expression IN expression
    (34) boolean -> . expression LT expression
    (35) boolean -> . expression LE expression
    (36) boolean -> . expression EQUALS expression
    (37) boolean -> . expression NE expression
    (38) boolean -> . expression GT expression
    (39) boolean -> . expression GE expression
    (41) boolean -> . BOOLEAN
    (17) factor -> . LPAREN expression RPAREN
    (18) factor -> . NUMBER
    (19) factor -> . MINUS factor

    LPAREN          shift and go to state 3
    TUPLEINDEX      shift and go to state 5
    NOT             shift and go to state 12
    LBRACKET        shift and go to state 9
    STRING          shift and go to state 14
    BOOLEAN         shift and go to state 15
    NUMBER          shift and go to state 16
    MINUS           shift and go to state 6

    expression                     shift and go to state 30
    tuple                          shift and go to state 4
    term                           shift and go to state 7
    list                           shift and go to state 8
    string                         shift and go to state 10
    boolean                        shift and go to state 11
    factor                         shift and go to state 13

state 4

    (3) expression -> tuple .

    SEMICOLON       reduce using rule 3 (expression -> tuple .)
    PLUS            reduce using rule 3 (expression -> tuple .)
    MINUS           reduce using rule 3 (expression -> tuple .)
    AND             reduce using rule 3 (expression -> tuple .)
    OR              reduce using rule 3 (expression -> tuple .)
    CONCAT          reduce using rule 3 (expression -> tuple .)
    IN              reduce using rule 3 (expression -> tuple .)
    LT              reduce using rule 3 (expression -> tuple .)
    LE              reduce using rule 3 (expression -> tuple .)
    EQUALS          reduce using rule 3 (expression -> tuple .)
    NE              reduce using rule 3 (expression -> tuple .)
    GT              reduce using rule 3 (expression -> tuple .)
    GE              reduce using rule 3 (expression -> tuple .)
    RPAREN          reduce using rule 3 (expression -> tuple .)
    COMMA           reduce using rule 3 (expression -> tuple .)
    LPAREN          reduce using rule 3 (expression -> tuple .)
    RBRACKET        reduce using rule 3 (expression -> tuple .)


state 5

    (7) expression -> TUPLEINDEX . expression tuple
    (2) expression -> . LPAREN expression RPAREN
    (3) expression -> . tuple
    (7) expression -> . TUPLEINDEX expression tuple
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . term
    (20) expression -> . list
    (26) expression -> . list LBRACKET expression RBRACKET
    (28) expression -> . string
    (30) expression -> . string PLUS expression
    (31) expression -> . string LBRACKET expression RBRACKET
    (40) expression -> . boolean
    (42) expression -> . NOT expression
    (43) expression -> . expression AND expression
    (44) expression -> . expression OR expression
    (4) tuple -> . LPAREN expression tupletail
    (11) term -> . term TIMES factor
    (12) term -> . term DIVIDE factor
    (13) term -> . factor POWER term
    (14) term -> . term DIV factor
    (15) term -> . term MOD factor
    (16) term -> . factor
    (21) list -> . LBRACKET tail
    (22) list -> . LBRACKET expression tail
    (25) list -> . list PLUS list
    (27) list -> . list LBRACKET expression RBRACKET
    (33) list -> . expression CONCAT list
    (29) string -> . STRING
    (32) boolean -> . expression IN expression
    (34) boolean -> . expression LT expression
    (35) boolean -> . expression LE expression
    (36) boolean -> . expression EQUALS expression
    (37) boolean -> . expression NE expression
    (38) boolean -> . expression GT expression
    (39) boolean -> . expression GE expression
    (41) boolean -> . BOOLEAN
    (17) factor -> . LPAREN expression RPAREN
    (18) factor -> . NUMBER
    (19) factor -> . MINUS factor

    LPAREN          shift and go to state 3
    TUPLEINDEX      shift and go to state 5
    NOT             shift and go to state 12
    LBRACKET        shift and go to state 9
    STRING          shift and go to state 14
    BOOLEAN         shift and go to state 15
    NUMBER          shift and go to state 16
    MINUS           shift and go to state 6

    expression                     shift and go to state 31
    tuple                          shift and go to state 4
    term                           shift and go to state 7
    list                           shift and go to state 8
    string                         shift and go to state 10
    boolean                        shift and go to state 11
    factor                         shift and go to state 13

state 6

    (19) factor -> MINUS . factor
    (17) factor -> . LPAREN expression RPAREN
    (18) factor -> . NUMBER
    (19) factor -> . MINUS factor

    LPAREN          shift and go to state 33
    NUMBER          shift and go to state 16
    MINUS           shift and go to state 6

    factor                         shift and go to state 32

state 7

    (10) expression -> term .
    (11) term -> term . TIMES factor
    (12) term -> term . DIVIDE factor
    (14) term -> term . DIV factor
    (15) term -> term . MOD factor

    SEMICOLON       reduce using rule 10 (expression -> term .)
    PLUS            reduce using rule 10 (expression -> term .)
    MINUS           reduce using rule 10 (expression -> term .)
    AND             reduce using rule 10 (expression -> term .)
    OR              reduce using rule 10 (expression -> term .)
    CONCAT          reduce using rule 10 (expression -> term .)
    IN              reduce using rule 10 (expression -> term .)
    LT              reduce using rule 10 (expression -> term .)
    LE              reduce using rule 10 (expression -> term .)
    EQUALS          reduce using rule 10 (expression -> term .)
    NE              reduce using rule 10 (expression -> term .)
    GT              reduce using rule 10 (expression -> term .)
    GE              reduce using rule 10 (expression -> term .)
    RPAREN          reduce using rule 10 (expression -> term .)
    COMMA           reduce using rule 10 (expression -> term .)
    LPAREN          reduce using rule 10 (expression -> term .)
    RBRACKET        reduce using rule 10 (expression -> term .)
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35
    DIV             shift and go to state 36
    MOD             shift and go to state 37


state 8

    (20) expression -> list .
    (26) expression -> list . LBRACKET expression RBRACKET
    (25) list -> list . PLUS list
    (27) list -> list . LBRACKET expression RBRACKET

  ! shift/reduce conflict for PLUS resolved as shift
    SEMICOLON       reduce using rule 20 (expression -> list .)
    MINUS           reduce using rule 20 (expression -> list .)
    AND             reduce using rule 20 (expression -> list .)
    OR              reduce using rule 20 (expression -> list .)
    CONCAT          reduce using rule 20 (expression -> list .)
    IN              reduce using rule 20 (expression -> list .)
    LT              reduce using rule 20 (expression -> list .)
    LE              reduce using rule 20 (expression -> list .)
    EQUALS          reduce using rule 20 (expression -> list .)
    NE              reduce using rule 20 (expression -> list .)
    GT              reduce using rule 20 (expression -> list .)
    GE              reduce using rule 20 (expression -> list .)
    RPAREN          reduce using rule 20 (expression -> list .)
    COMMA           reduce using rule 20 (expression -> list .)
    LPAREN          reduce using rule 20 (expression -> list .)
    RBRACKET        reduce using rule 20 (expression -> list .)
    LBRACKET        shift and go to state 38
    PLUS            shift and go to state 39

  ! PLUS            [ reduce using rule 20 (expression -> list .) ]


state 9

    (21) list -> LBRACKET . tail
    (22) list -> LBRACKET . expression tail
    (23) tail -> . COMMA expression tail
    (24) tail -> . RBRACKET
    (2) expression -> . LPAREN expression RPAREN
    (3) expression -> . tuple
    (7) expression -> . TUPLEINDEX expression tuple
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . term
    (20) expression -> . list
    (26) expression -> . list LBRACKET expression RBRACKET
    (28) expression -> . string
    (30) expression -> . string PLUS expression
    (31) expression -> . string LBRACKET expression RBRACKET
    (40) expression -> . boolean
    (42) expression -> . NOT expression
    (43) expression -> . expression AND expression
    (44) expression -> . expression OR expression
    (4) tuple -> . LPAREN expression tupletail
    (11) term -> . term TIMES factor
    (12) term -> . term DIVIDE factor
    (13) term -> . factor POWER term
    (14) term -> . term DIV factor
    (15) term -> . term MOD factor
    (16) term -> . factor
    (21) list -> . LBRACKET tail
    (22) list -> . LBRACKET expression tail
    (25) list -> . list PLUS list
    (27) list -> . list LBRACKET expression RBRACKET
    (33) list -> . expression CONCAT list
    (29) string -> . STRING
    (32) boolean -> . expression IN expression
    (34) boolean -> . expression LT expression
    (35) boolean -> . expression LE expression
    (36) boolean -> . expression EQUALS expression
    (37) boolean -> . expression NE expression
    (38) boolean -> . expression GT expression
    (39) boolean -> . expression GE expression
    (41) boolean -> . BOOLEAN
    (17) factor -> . LPAREN expression RPAREN
    (18) factor -> . NUMBER
    (19) factor -> . MINUS factor

    COMMA           shift and go to state 42
    RBRACKET        shift and go to state 43
    LPAREN          shift and go to state 3
    TUPLEINDEX      shift and go to state 5
    NOT             shift and go to state 12
    LBRACKET        shift and go to state 9
    STRING          shift and go to state 14
    BOOLEAN         shift and go to state 15
    NUMBER          shift and go to state 16
    MINUS           shift and go to state 6

    tail                           shift and go to state 40
    expression                     shift and go to state 41
    tuple                          shift and go to state 4
    term                           shift and go to state 7
    list                           shift and go to state 8
    string                         shift and go to state 10
    boolean                        shift and go to state 11
    factor                         shift and go to state 13

state 10

    (28) expression -> string .
    (30) expression -> string . PLUS expression
    (31) expression -> string . LBRACKET expression RBRACKET

  ! shift/reduce conflict for PLUS resolved as shift
    SEMICOLON       reduce using rule 28 (expression -> string .)
    MINUS           reduce using rule 28 (expression -> string .)
    AND             reduce using rule 28 (expression -> string .)
    OR              reduce using rule 28 (expression -> string .)
    CONCAT          reduce using rule 28 (expression -> string .)
    IN              reduce using rule 28 (expression -> string .)
    LT              reduce using rule 28 (expression -> string .)
    LE              reduce using rule 28 (expression -> string .)
    EQUALS          reduce using rule 28 (expression -> string .)
    NE              reduce using rule 28 (expression -> string .)
    GT              reduce using rule 28 (expression -> string .)
    GE              reduce using rule 28 (expression -> string .)
    RPAREN          reduce using rule 28 (expression -> string .)
    COMMA           reduce using rule 28 (expression -> string .)
    LPAREN          reduce using rule 28 (expression -> string .)
    RBRACKET        reduce using rule 28 (expression -> string .)
    PLUS            shift and go to state 44
    LBRACKET        shift and go to state 45

  ! PLUS            [ reduce using rule 28 (expression -> string .) ]


state 11

    (40) expression -> boolean .

    SEMICOLON       reduce using rule 40 (expression -> boolean .)
    PLUS            reduce using rule 40 (expression -> boolean .)
    MINUS           reduce using rule 40 (expression -> boolean .)
    AND             reduce using rule 40 (expression -> boolean .)
    OR              reduce using rule 40 (expression -> boolean .)
    CONCAT          reduce using rule 40 (expression -> boolean .)
    IN              reduce using rule 40 (expression -> boolean .)
    LT              reduce using rule 40 (expression -> boolean .)
    LE              reduce using rule 40 (expression -> boolean .)
    EQUALS          reduce using rule 40 (expression -> boolean .)
    NE              reduce using rule 40 (expression -> boolean .)
    GT              reduce using rule 40 (expression -> boolean .)
    GE              reduce using rule 40 (expression -> boolean .)
    RPAREN          reduce using rule 40 (expression -> boolean .)
    COMMA           reduce using rule 40 (expression -> boolean .)
    LPAREN          reduce using rule 40 (expression -> boolean .)
    RBRACKET        reduce using rule 40 (expression -> boolean .)


state 12

    (42) expression -> NOT . expression
    (2) expression -> . LPAREN expression RPAREN
    (3) expression -> . tuple
    (7) expression -> . TUPLEINDEX expression tuple
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . term
    (20) expression -> . list
    (26) expression -> . list LBRACKET expression RBRACKET
    (28) expression -> . string
    (30) expression -> . string PLUS expression
    (31) expression -> . string LBRACKET expression RBRACKET
    (40) expression -> . boolean
    (42) expression -> . NOT expression
    (43) expression -> . expression AND expression
    (44) expression -> . expression OR expression
    (4) tuple -> . LPAREN expression tupletail
    (11) term -> . term TIMES factor
    (12) term -> . term DIVIDE factor
    (13) term -> . factor POWER term
    (14) term -> . term DIV factor
    (15) term -> . term MOD factor
    (16) term -> . factor
    (21) list -> . LBRACKET tail
    (22) list -> . LBRACKET expression tail
    (25) list -> . list PLUS list
    (27) list -> . list LBRACKET expression RBRACKET
    (33) list -> . expression CONCAT list
    (29) string -> . STRING
    (32) boolean -> . expression IN expression
    (34) boolean -> . expression LT expression
    (35) boolean -> . expression LE expression
    (36) boolean -> . expression EQUALS expression
    (37) boolean -> . expression NE expression
    (38) boolean -> . expression GT expression
    (39) boolean -> . expression GE expression
    (41) boolean -> . BOOLEAN
    (17) factor -> . LPAREN expression RPAREN
    (18) factor -> . NUMBER
    (19) factor -> . MINUS factor

    LPAREN          shift and go to state 3
    TUPLEINDEX      shift and go to state 5
    NOT             shift and go to state 12
    LBRACKET        shift and go to state 9
    STRING          shift and go to state 14
    BOOLEAN         shift and go to state 15
    NUMBER          shift and go to state 16
    MINUS           shift and go to state 6

    expression                     shift and go to state 46
    tuple                          shift and go to state 4
    term                           shift and go to state 7
    list                           shift and go to state 8
    string                         shift and go to state 10
    boolean                        shift and go to state 11
    factor                         shift and go to state 13

state 13

    (13) term -> factor . POWER term
    (16) term -> factor .
